--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,20 @@ cmake_minimum_required(VERSION 3.13)
 
 project(git-starter-cpp)
 
-set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)
 
 add_executable(git ${SOURCE_FILES})
 
-# Find OpenSSL
 find_package(OpenSSL REQUIRED)
+find_package(ZLIB REQUIRED)
+find_package(CURL REQUIRED)
 
-# Link against zlib and OpenSSL's crypto library
-target_link_libraries(git PRIVATE OpenSSL::Crypto -lz)
+target_link_libraries(git 
+    PRIVATE 
+        OpenSSL::Crypto
+        ZLIB::ZLIB
+        CURL::libcurl
+)
